Secure runtime environment bootstrap (#99)